# sensor_placement_optimization

./: CMakeLists.txt  LICENSE  README.md  package.xml
docs/: sensors.ods  tests.txt
include/active_perception/: active_perception.h
include/sensor_placement_optimization/: sensor_placement_optimization.h
launch/: active_perception.launch  bin_picking.launch  bin_picking_with_occlusions.launch  multiple_bin_picking_with_occlusions.launch  sensor_placement_optimization.launch
media/materials/: active_perception.material  sensor_placement_optimization.material
media/models/alternator/: model.config  model.sdf
media/models/asus_xtion_pro_live/: model.config  model.sdf
media/models/asus_xtion_pro_live/meshes/: asus_xtion_pro_live.dae
media/models/asus_xtion_pro_live_sensor/: model.config  model.sdf
media/models/asus_xtion_pro_live_sensor/meshes/: asus_xtion_pro_live_sensor.stl
media/models/differential_gearbox/: model.config  model.sdf
media/models/ensenso_n35_sensor/: model.config  model.sdf
media/models/ensenso_n35_sensor/meshes/: ensenso_n35_sensor.stl
media/models/intel_realsense_d415_sensor/: model.config  model.sdf
media/models/intel_realsense_d415_sensor/meshes/: intel_realsense_d415_sensor.stl
media/models/intel_realsense_sr300_sensor/: model.config  model.sdf
media/models/intel_realsense_sr300_sensor/meshes/: intel_realsense_sr300_sensor.stl
media/models/kinect1/: model.config
media/models/kinect1/meshes/: asus_xtion_pro_live.dae
media/models/kinect_1/: model.config  model.sdf
media/models/kinect_1/meshes/: kinect_1.dae
media/models/kinect_xbox_360_sensor/: model.config  model.sdf
media/models/kinect_xbox_360_sensor/meshes/: kinect_xbox_360_sensor.stl
media/models/kinect_xbox_one_sensor/: model.config  model.sdf
media/models/mpl_right_arm_grasping/: model.sdf
media/models/multisense_s7_sensor/: model.config  model.sdf
media/models/orbbec_astra_sensor/: model.config  model.sdf
media/models/orbbec_astra_sensor/meshes/: orbbec_astra_sensor.stl
media/models/photoneo_s_sensor/: model.config  model.sdf
media/models/photoneo_s_sensor/meshes/: photoneo_s_sensor.stl
media/models/stacking_box/: model.config  model.sdf
media/models/stacking_box/meshes/: stacking_box.stl
media/models/starter_motor/: model.config  model.sdf
media/models/starter_motor/meshes/: starter_motor.stl
media/models/tool_trolley/: model.config  model.sdf
media/models/zed_sensor/: model.config  model.sdf
media/models/zed_sensor/meshes/: zed_sensor.stl
models/kinect1/: model.sdf
rviz/: active_perception.rviz  sensor_placement_optimization.rviz
src/: active_perception.cpp  sensor_placement_optimization.cpp
worlds/: active_perception.world  bin_picking.world  bin_picking_with_occlusions.world  multiple_bin_picking_with_occlusions.world  sensor_placement_optimization.world  sensors.world
